@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh.1,v 1.111 2001/05/17 21:34:15 markus Exp $
+.\" $OpenBSD: ssh.1,v 1.112 2001/05/19 16:32:16 markus Exp $
 .Dd September 25, 1999
 .Dt SSH 1
 .Os
@@ -812,7 +812,7 @@ The argument must be
 or
 .Dq no .
 The default is
-.Dq yes .
+.Dq no .
 This option applies to protocol version 2 only and
 is similar to
 .Cm RhostsRSAAuthentication .
@@ -925,7 +925,7 @@ authentication methods. This allows a client to prefer one method (e.g.
 over another method (e.g.
 .Cm password )
 The default for this option is:
-.Dq publickey,password,keyboard-interactive
+.Dq publickey,hostbased,password,keyboard-interactive
 .It Cm Protocol
 Specifies the protocol versions
 .Nm
